# fastapi-prod-guide

./: .env-example  Dockerfile  LICENSE  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml
app/: config.py  conftest.py  main.py  static_values.py
app/routers/auth/: auth.py  models.py
app/routers/todos/: models.py  test_todos.py  todos.py
app/utilities/: db.py  logger.py
k8s/: deployment.yaml  service.yaml
